fixes missing border under copy permissions & buttons placement

--- a/cms/static/cms/sass/components/_dialog.scss
+++ b/cms/static/cms/sass/components/_dialog.scss
@@ -16,14 +16,13 @@
     background: $white;
     box-shadow: $dialog-shadow;
     transform: translateZ(0);
-
     h1 {
         margin: 0 0 $padding-normal;
         padding: 0;
     }
     form {
-        margin: $padding-normal 0;
-        padding: $padding-normal 0;
+        margin: 0 -20px;
+        padding: 0 20px !important;
         border-top: 1px solid $gray-lighter;
         label {
             display: inline;
@@ -33,10 +32,29 @@
             top: -3px;
         }
         p {
+            margin: 0 20px;
+            margin-bottom: 0;
             padding: $padding-normal 0;
+            &:after {
+                content: "";
+                position: absolute;
+                left: 0;
+                width: 100%;
+                height: 30px;
+                border-bottom: 1px solid $gray-lighter;
+            }
+        }
+        input[type="submit"] {
+            margin-bottom: 0 !important;
+        }
+        .submit-row {
+            margin: 10px -20px 0;
+            padding: 20px 20px 0;
+            input {
+                margin-left: 0;
+            }
         }
     }
-
     @media (max-width: ($dialog-width + 2 * $padding-large)) {
         right: 0;
         left: 0;
@@ -47,8 +65,8 @@
 
 .cms-dialog-dimmer {
     position: fixed;
-    left: 0;
     top: 0;
+    left: 0;
     z-index: z(dialog-dimmer);
     width: 100%;
     height: 100%;
